--- a/paper/egpaper_final.tex
+++ b/paper/egpaper_final.tex
@@ -434,7 +434,7 @@ one able to reach it faster.
 
 \subsection{Italian generation: finetuning experiments}
 In order to test the functionality of the fine-tuning we have performed three experiments
-%\footnote[1]{https://github.com/JuanJoseMV/neuraltextgen/blob/main/Example\_finetuning.ipynb}.
+\footnote[1]{https://github.com/JuanJoseMV/neuraltextgen/blob/main/Example\_finetuning.ipynb}.
 All the experiments were performed with an italian pretrained BERT model applied on Italian sets of text.
 All the fine-tunings use the AdamW optimizer with linear schedule with warmup, as common use for finetuning transformer methods.
 
